# android_packages_apps_camera2

./: .gitignore  README.md  build.gradle  local.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/jpegutil/: jpegutil.cpp
app/src/main/java/com/kalu/camera/: TestActivity.java
app/src/main/java/com/kalu/camera2/: TestActivity.java
app/src/main/res/layout/: activity_test.xml
gradle/wrapper/: gradle-wrapper.properties
lib_camera2_mkq/: build.gradle
lib_camera2_mkq/src/main/: AndroidManifest.xml
lib_camera2_mkq/src/main/java/com/android/camera/: CameraActivity.java
lib_camera2_mkq/src/main/java/com/android/camera/async/: Futures2.java
lib_camera2_mkq/src/main/java/com/android/camera/one/v2/camera2proxy/: ForwardingImageProxy.java
lib_camera2_mkq/src/main/res/layout-land/: mode_options.xml
lib_camera2_mkq/src/main/res/layout-port/: mode_options.xml
lib_camera2_mkq/src/main/res/menu/: filmstrip_menu.xml
lib_camera2_mkq/src/main/res/values-zh-rCN/: strings.xml
